--- a/clusters/staging/my-ingress.yaml
+++ b/clusters/staging/my-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     name: myapp
 spec:
   rules:
-    - host: job-exam.com
+    - host: job-exam-CD.com
       http:
         paths:
           - path: /
