--- a/clusters/staging/image-automation.yaml
+++ b/clusters/staging/image-automation.yaml
@@ -8,4 +8,4 @@ spec:
   sourceRef:
     kind: GitRepository # the only valid value, but good practice to be explicit here
     name: apps
-    namespace: flux-system
+    namespace: test-cd
