--- a/clusters/staging/image-reflector.yaml
+++ b/clusters/staging/image-reflector.yaml
@@ -2,7 +2,7 @@ apiVersion: image.toolkit.fluxcd.io/v1alpha1
 kind: ImageRepository
 metadata:
   name: podinfo
-  namespace: flux-system
+  namespace: test-cd
 spec:
   interval: 1m0s
   image: docker.io/dhairya442/docker_exe
