--- a/clusters/staging/image-automation.yaml
+++ b/clusters/staging/image-automation.yaml
@@ -1,11 +1,50 @@
+# apiVersion: image.toolkit.fluxcd.io/v1beta1
+# kind: ImageUpdateAutomation
+# metadata:
+#   name: webapp
+#   namespace: apps
+# spec:
+#   interval: 1m
+#   sourceRef:
+#     kind: GitRepository # the only valid value, but good practice to be explicit here
+#     name: apps
+#     namespace: test-cd
+
+# --- 
+
+# apiVersion: image.toolkit.fluxcd.io/v1beta1
+# kind: ImageUpdateAutomation
+# metadata:
+#   name: myapp
+#   namespace: test-cd 
+# spec:
+#   interval: 1m
+#   sourceRef:
+#     kind: GitRepository # the only valid value, but good practice to be explicit here
+#     name: myapp
+#     namespace: test-cd 
+# --- 
 apiVersion: image.toolkit.fluxcd.io/v1beta1
 kind: ImageUpdateAutomation
 metadata:
-  name: webapp
-  namespace: apps
+  name: flux-system
+  namespace: test-cd
 spec:
-  interval: 1m
+  interval: 1m0s
   sourceRef:
-    kind: GitRepository # the only valid value, but good practice to be explicit here
-    name: apps
-    namespace: test-cd
+    kind: GitRepository
+    name: myapp
+  git:
+    checkout:
+      ref:
+        branch: main
+    commit:
+      author:
+        email: fluxcdbot@users.noreply.github.com
+        name: fluxcdbot
+      messageTemplate: '{{range .Updated.Images}}{{println .}}{{end}}'
+    push:
+      branch: main
+  update:
+    path: ./clusters/staging
+    strategy: Setters
