update the image-automation file

--- a/clusters/staging/image-automation.yaml
+++ b/clusters/staging/image-automation.yaml
@@ -33,7 +33,7 @@ spec:
   interval: 1m0s
   sourceRef:
     kind: GitRepository
-    name: myapp
+    name: flux-system
   git:
     checkout:
       ref:
