--- a/clusters/staging/flux-system/gotk-sync.yaml
+++ b/clusters/staging/flux-system/gotk-sync.yaml
@@ -10,7 +10,7 @@ spec:
   ref:
     branch: main
   secretRef:
-    name: flux-system
+    name: podinfo-auth
   url: ssh://git@github.com/dhairya221b/cd-test
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
